add logistic note

--- a/notebook/machine-learning/deep_learning-linear-regression-gradient-decent.ipynb
+++ b/notebook/machine-learning/deep_learning-linear-regression-gradient-decent.ipynb
@@ -16,7 +16,7 @@
     "In this note, I am going to train a linear regression model with `gradient decent` estimation.\n",
     "It might look pretty easy but it's very helpful to increase the understanding of the basics of Deep Learning.\n",
     "\n",
-    "The sample code in this note come from [peterroelants.github.io](http://peterroelants.github.io/) where providing more details on neural netwrok and deep learning. It's very informative and highly recommanded. Below is more like my personal notes."
+    "The sample codes in this note come from [peterroelants.github.io](http://peterroelants.github.io/) where providing more details on neural netwrok and deep learning. It's very informative and highly recommanded. Here is more like my personal memo."
    ]
   },
   {
@@ -25,11 +25,10 @@
    "source": [
     "# Overview\n",
     "\n",
-    "Below will be covered:\n",
+    "This note will covere:\n",
     "* Prepare the data\n",
     "* Loss function, chian rule and its derivative\n",
-    "* Code implementation\n",
-    "* Summary"
+    "* Code implementation"
    ]
   },
   {
@@ -59,16 +58,11 @@
     "%matplotlib inline\n",
     "numpy.random.seed(seed=1)\n",
     "\n",
-    "# Define the vector of input samples as x, with 20 values sampled from a uniform distribution\n",
-    "# between 0 and 1\n",
     "x = numpy.random.uniform(0, 1, 20)\n",
     "\n",
-    "# Generate the target values t from x with small gaussian noise so the estimation won't\n",
-    "# be perfect.\n",
-    "# Define a function f that represents the line that generates t without noise\n",
+    "# real model\n",
     "def f(x): return x * 2\n",
     "\n",
-    "# Create the targets t with some gaussian noise\n",
     "noise_variance = 0.2  # Variance of the gaussian noise\n",
     "# Gaussian noise error for each sample in x\n",
     "noise = numpy.random.randn(x.shape[0]) * noise_variance\n",
@@ -140,7 +134,7 @@
     "and because $y=x*w$:\n",
     "$$\\frac{\\partial y_{i}}{\\partial w_{i}}=x_{i}$$\n",
     "\n",
-    "The result is simple:\n",
+    "so combine everything we will get:\n",
     "$$\\Delta w = \\mu * 2 * \\sum_{i=1}^{N}x_{i}(y_{i}-t_{i})$$\n"
    ]
   },
