change the title

--- a/notebook/machine-learning/deep_learning-linear-regression-gradient-decent.ipynb
+++ b/notebook/machine-learning/deep_learning-linear-regression-gradient-decent.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deep Learning - Linear Regression with Gradient Decent"
+    "# Linear Regression"
    ]
   },
   {
