remove .ipynb_checkpoints files

--- a/notebook/machine-learning/deep_learning-logistic-regression-gradient-decent.ipynb
+++ b/notebook/machine-learning/deep_learning-logistic-regression-gradient-decent.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "This note will covere:\n",
     "* Prepare the data\n",
-    "* Loss function, chian rule and its derivative\n",
+    "* Loss function, chain rule and its derivative\n",
     "* Code implementation"
    ]
   },
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loss function, chian rule and its derivative"
+    "# Loss function, chain rule and its derivative"
    ]
   },
   {
