add neural network

--- a/notebook/machine-learning/deep_learning-neural-network-gradient-decent-part2.ipynb
+++ b/notebook/machine-learning/deep_learning-neural-network-gradient-decent-part2.ipynb
@@ -4,15 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Neural Network"
+    "# Neural Network - with multiple inputs and hidden layers"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this note, I am going to train a neural network model with gradient decent estimation. This model will only have 2 direct inputs and 1 hidden layer with 3 neurons and logistic transform. The output layer will use softmax. \n",
+    "In this note, I am going to train a neural network model with `gradient decent` estimation. This model will only have 2 direct inputs and 1 hidden layer with 3 neurons and logistic transform. The output layer will use softmax. \n",
     "It's very textbook model but it's just good enough to understand how `back propagation` works. \n",
+    "\n",
+    "The model can be visualized as below: \n",
+    "<img src=\"img/SimpleANN04.png\">\n",
     "\n",
     "The sample codes in this note come from [peterroelants.github.io](http://peterroelants.github.io/) where providing more details on neural netwrok and deep learning. It's very informative and highly recommanded. Here is more like my personal memo."
    ]
@@ -27,6 +30,13 @@
     "* Prepare the data\n",
     "* Loss function, chain rule and its derivative\n",
     "* Code implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Parepare the data"
    ]
   }
  ],
