new post for nerual network

--- a/notebook/machine-learning/deep_learning-neural-network-gradient-decent-part1.ipynb
+++ b/notebook/machine-learning/deep_learning-neural-network-gradient-decent-part1.ipynb
@@ -162,8 +162,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Model can be visualized as below: \n",
-    "<img src=\"img/SimpleANN03.png\">\n",
+    "Model can be visualized as below:  \n",
+    "<p align=\"center\">\n",
+    "<img src=\"https://raw.githubusercontent.com/weichetaru/weichetaru.github.com/master/notebook/machine-learning/img/SimpleANN03.png\"></p>\n",
     "\n",
     "Specifically, for hidden layer **h**:\n",
     "\n",
@@ -176,14 +177,14 @@
     "For **y**:\n",
     "$$\\mathbf{y} = \\sigma(\\mathbf{h} * w_o - 1) = \\frac{1}{1+e^{-\\mathbf{h} * w_o - 1}}$$\n",
     "\n",
-    "Note the -1 to present bias(intercept) term. Usually it should also trained by model but to keep model simple here we simply use contant -1. </p> \n",
+    "Note the -1 to present bias(intercept) term. Usually it should also trained by model but to keep model simple here we simply use contant -1. \n",
     "\n",
-    "We still use `cross-entropy cost function`.</p>\n",
+    "We still use `cross-entropy cost function`.  \n",
     "As we specified before in [Logistic Regression](https://weichetaru.github.io/machine-learning/2016/11/23/deep_learning-logistic-regression-gradient-decent#Loss-function,-chain-rule-and-its-derivative) For Binary variable. It should be: \n",
     "\n",
     "$$\\xi(t_i,y_i) = - \\left[ t_i log(y_i) + (1-t_i)log(1-y_i) \\right]$$\n",
     "\n",
-    "The model and functions specified above is what we usually call `forward step` in neural network. It will produce error/cost/gradient which we will use to adjust parameters during `backward propagation`. </p>\n",
+    "The model and functions specified above is what we usually call `forward step` in neural network. It will produce error/cost/gradient which we will use to adjust parameters during `backward propagation`.   \n",
     "\n",
     "We can at first specify the forward step into code and plot the cost function. "
    ]
@@ -302,14 +303,14 @@
     "\n",
     "Note here $z_{oi} = h_i * w_o$ and ${\\partial \\xi_i}/{\\partial z_{oi}} = \\delta_{oi}$\n",
     "\n",
-    "For Hidden layer, still use chain rule:\n",
+    "For Hidden layer, still use `chain rule`:\n",
     "\n",
     "$$\\frac{\\partial \\xi_i}{\\partial w_{h}} = \\frac{\\partial z_{hi}}{\\partial w_{h}} \\frac{\\partial h_i}{\\partial z_{hi}} \\frac{\\partial \\xi_i}{\\partial h_i}$$\n",
     "\n",
     "\n",
-    "Note here $z_{hi} = x_i * w_{h}$ and ${\\partial \\xi_i}/{\\partial z_{hi}} = \\delta_{hi}$. </p>\n",
+    "Note here $z_{hi} = x_i * w_{h}$ and ${\\partial \\xi_i}/{\\partial z_{hi}} = \\delta_{hi}$.   \n",
     "\n",
-    "How to define $\\delta_{hi}$? Simple, still use chain rule: \n",
+    "How to define $\\delta_{hi}$? Simple, still use `chain rule`: \n",
     "\n",
     "$$\\delta_{hi} = \\frac{\\partial \\xi_i}{\\partial z_{hi}} = \\frac{\\partial h_i}{\\partial z_{hi}} \\frac{\\partial z_{oi}}{\\partial h_i} \\frac{\\partial \\xi_i}{\\partial z_{oi}} \n",
     "= (-2 * z_{hi} * h_i) * w_{o} * (y_i - t_i) = -2 * z_{hi} * h_i * w_{o} * \\delta_{oi}$$\n",
