new posts 12-05 and 12-11

--- a/notebook/machine-learning/deep_learning-neural-network-gradient-decent-part1.ipynb
+++ b/notebook/machine-learning/deep_learning-neural-network-gradient-decent-part1.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this note, I am going to train a neural network model with `gradient decent` estimation. This model will only have 1 direct inputs and 1 hidden layer with 1 neurons and logistic transform. The hidden layer will be build with Gaussian radial basis function (**RBF**)and the output layer will use logistic function to have non-linear transformation. \n",
+    "In this note, I am going to train a neural network model with `gradient decent` estimation. This model will only have 1 direct inputs and 1 hidden layer with 1 neuron and logistic transform. The hidden layer will be build with Gaussian radial basis function (**RBF**)and the output layer will use logistic function to have non-linear transformation. \n",
     "This model is simple enough to understand how `back propagation` works. \n",
     "\n",
     "The sample codes in this note come from [peterroelants.github.io](http://peterroelants.github.io/) where providing more details on neural netwrok and deep learning. It's very informative and highly recommanded. Here is more like my personal memo."
