--- a/notebook/machine-learning/deep_learning-linear-regression-gradient-decent.ipynb
+++ b/notebook/machine-learning/deep_learning-linear-regression-gradient-decent.ipynb
@@ -112,11 +112,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Model can be described as $y=x*w$. Note $t$ is our target data generated with noise. \n",
-    "\n",
     "Model can be visualized as below:  \n",
     "<p align=\"center\">\n",
-    "<img src=\"https://raw.githubusercontent.com/weichetaru/weichetaru.github.com/master/notebook/machine-learning/img/LinearRegression.png\"></p>\n",
+    "<img src=\"img/LinearRegression.png\"></p>\n",
+    "\n",
+    "Model can be described as $y=x*w$. Note $t$ is our target data generated with noise. \n",
     "\n",
     "We can then define squared error cost as below:\n",
     "$$\\xi = \\sum_{i=1}^{N}\\left \\| t_{i}  - y_{i}\\right \\|^{2} $$\n",
