--- a/notebook/machine-learning/deep_learning-linear-regression-gradient-decent.ipynb
+++ b/notebook/machine-learning/deep_learning-linear-regression-gradient-decent.ipynb
@@ -114,7 +114,7 @@
    "source": [
     "Model can be visualized as below:  \n",
     "<p align=\"center\">\n",
-    "<img src=\"img/LinearRegression.png\"></p>\n",
+    "<img src=\"img/LinearRegression.png\" width=\"200\" height=\"20\"></p>\n",
     "\n",
     "Model can be described as $y=x*w$. Note $t$ is our target data generated with noise. \n",
     "\n",
