--- a/notebook/machine-learning/deep_learning-recurrent-neural-network.ipynb
+++ b/notebook/machine-learning/deep_learning-recurrent-neural-network.ipynb
@@ -17,7 +17,8 @@
     "The model we are going to train is to count how many 1's it sees on a binary input stream, and output the total count at the end of the sequence. Obviously, we know $w_{rec} = w_x = 1$. The point here is to understand the training process of RNN.\n",
     "\n",
     "It can also be visicualized as: \n",
-    "<p align=\"center\"><img src=\"https://raw.githubusercontent.com/weichetaru/weichetaru.github.com/master/notebook/machine-learning/img/SimpleRNN01.png\"></p>"
+    "<p align=\"center\">\n",
+    "<img src=\"https://raw.githubusercontent.com/weichetaru/weichetaru.github.com/master/notebook/machine-learning/img/SimpleRNN01.png\"></p>"
    ]
   },
   {
@@ -428,7 +429,8 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -443,6 +445,13 @@
     "test_inpt = np.asmatrix([[0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1]])\n",
     "test_outpt = forward_states(test_inpt, W[0], W[1])[:,-1]\n",
     "print('Target output: {:d} vs Model output: {:.2f}'.format(test_inpt.sum(), test_outpt[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The sample codes in this note come from [peterroelants.github.io](http://peterroelants.github.io/) where providing more details on neural netwrok and deep learning. It's very informative and highly recommanded. Here is more like my personal memo."
    ]
   }
  ],
